--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
 		"cf-typegen": "wrangler types"
 	},
 	"dependencies": {
+		"@ai-sdk/anthropic": "^1.2.12",
 		"@ai-sdk/google": "^1.2.14",
+		"@ai-sdk/openai": "^1.3.22",
 		"@ai-sdk/react": "^1.2.9",
 		"@radix-ui/react-avatar": "^1.1.7",
 		"@radix-ui/react-scroll-area": "^1.2.6",
